--- a/src/ui/inspector/inspector.scss
+++ b/src/ui/inspector/inspector.scss
@@ -219,6 +219,10 @@
       color: $colorBodyFg
     }
   }
+
+  &__header {
+    color: $colorBodyFgEm;
+  }
 }
 
 .is-editing {
